# R-Type

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  configure.sh  requirements.txt
.github/actions/clang-tidy/: action.yml
.github/actions/clang-tidy/dep/: .clang-tidy  Dockerfile  review.py
.github/actions/get-cmake/: action.yml
.github/actions/get-cmake/dep/: README.md  action.yml  jest.config.js  tsconfig.json
.github/actions/get-cmake/dep/__tests__/: action_failed.test.ts  action_succeeded.test.ts  cachehit.test.ts  cachemiss.test.ts  cacherestorefailure.test.ts  notmpdir.test.ts
.github/actions/get-cmake/dep/src/: get-cmake.ts
.github/workflows/: coding-style.yml
cmake/: conan.cmake
doc/: network_doc.docx
inc/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  Network.hpp  Protocol.hpp  Server.hpp  Signature.hpp  System.hpp  SystemManager.hpp
inc/client/: Bullets.hpp  Button.hpp  Ennemy.hpp  GameContainer.hpp  GameGraphic.hpp  Parallax.hpp  Screens.hpp  SpaceShip.hpp  Texture.hpp  interactServer.hpp
inc/ecs/: Enemy.hpp
inc/utils/: Direction.hpp  Vector.hpp
src/client/: Bullets.cpp  Button.cpp  Ennemy.cpp  Game.cpp  GameContainer.cpp  GameGraphic.cpp  GameHud.cpp  Menu.cpp  Parallax.cpp  SpaceShip.cpp  interactServer.cpp  main_client.cpp
src/ecs/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  SystemManager.cpp
src/ecs_entities/: Enemy.cpp
src/network/: Network.cpp  Protocol.cpp  main_network.cpp
src/server/: Server.cpp
src/utils/: Vector.cpp
tests/: tests.cpp
tests/ecs/: test_ecs.cpp
